tests/fixtures/invalid/bin_set.py
# Cannot call bin() with Set[int]
x = bin({1, 2, 3})
